Add Shaders button to NotFine's video options Small refactors